--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "antd": "^5.17.0",
     "axios": "^1.6.5",
     "jquery": "^3.7.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
-    "react-timetable-events": "^2.0.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
