--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "slugify": "^1.6.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "slick-carousel": "^1.8.1",
+    "react-slick": "^0.29.0"
   },
   "scripts": {
     "start": "react-scripts start",
