--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
-    "slugify": "^1.6.6",
-    "web-vitals": "^2.1.4",
     "slick-carousel": "^1.8.1",
-    "react-slick": "^0.29.0"
+    "slugify": "^1.6.6",
+    "socket.io-client": "^4.7.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
