--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.7.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@material-ui/core": "^4.11.2",
+    "material-ui-chip-input": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
